sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:10: error: ')' expected but integer literal found.
		if (ecart >1 1)
                             ^AlgCombSort:14: error: illegal start of simple expression
	}
        ^