sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {

	var ecart = getNombreValeurs
	var tri : Boolean = false
	var i = 0 

	while (!tri || ecart > 1)
	{
		if (ecart >1 1)
		{
			ecart = (ecart.toDouble / 1.3).toInt 
		}
	}

	i = 0 

	tri = true

	while (i+ecart < getNombreValeurs)
	{
		if (!plusPetit(i, i +ecart))
		{
			echange (i, i +ecart)
			tri = false
		}
		i +=1 
		
	}
}
